--- a/systemsvis.html
+++ b/systemsvis.html
@@ -6,7 +6,7 @@
 	<script src="external/jquery-2.1.1.js" type="text/javascript"></script>
 	<script src="external/three.js" type="text/javascript"></script>
 	<script src="external/TrackballControls.js" type="text/javascript"></script>
-	<script src="tgc.js" type="text/javascript"></script>
+	<script src="ed-systems.js"></script>
 	<style>
 		body {
 			color: #ffffff;
@@ -29,11 +29,20 @@ var axes;
 
 var systems = [];
 
-var cmdrColors = ['gray', 'red', 'aqua', 'blue', 'lime', 'fuchsia', 'yellow', 'orange', 'maroon', 'teal', 'navy', 'green', 'purple', 'olive','white'];
+var cmdrColors = ['gray', 'aqua', 'blue', 'red', 'lime', 'fuchsia', 'yellow', 'orange', 'maroon', 'teal', 'navy', 'green', 'purple', 'olive','white'];
 var cmdrColorMap = {};
 
+function logAppend(str) {
+	console.log(str);
+}
+
+function nameKey(n) {
+	return $.trim(n.toLowerCase());
+}
+
 $(document).ready(function () {
-	getTGCData(function() {
+	EDSM.fetchSystems(function() {
+//	getTGCData(function() {
 		var contribMap = {};
 		
 		$.each(systemsMap, function(k, v) {
@@ -62,7 +71,7 @@ $(document).ready(function () {
 		var i = 0;
 		var rest = 0, restNames = 0;
 		$.each(contribCount, function() {
-			if (i < cmdrColors.length-1 && this.name !== '(unknown)') {
+			if (i < cmdrColors.length-1 && this.name !== '(unknown)' && this.name !== 'anonymous') {
 				$('<tr>')
 					.append($('<td>').width('1.5em').css('background',cmdrColors[i]))
 					.append($('<td>').text(this.name+': '+this.coords+' ('+this.names+')'))
@@ -96,7 +105,7 @@ function init() {
         45,
         window.innerWidth / window.innerHeight,
         1,
-        20000);
+        200000);
 	camera.position.z = 2500;
 
 	controls = new THREE.TrackballControls( camera );
