--- a/entry.html
+++ b/entry.html
@@ -10,6 +10,7 @@
 	<script src="external/jquery-ui.js"></script>
 	<script src="trilateration.js"></script>
 	<script src="tgc.js"></script>
+	<script src="ed-systems.js"></script>
 <!--	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>-->
 <script>
 // version: 20150228-1
@@ -28,7 +29,7 @@ var config = {
 		sql: false,
 		responses: false
 	},
-	'fetch-from': 'TGC',
+	'fetch-from': 'EDSM',
 	'submit-to': {
 		'EDSM': true,
 		'TGC': true
@@ -50,7 +51,7 @@ function sendToEDSM(data, success, failure) {
 	$.ajax({
 		type: 'GET',
 		contentType: 'application/x-www-form-urlencoded',
-		url: 'http://the-temple.de/public/posttest.php?'+encodeURIComponent(JSON.stringify({data: data})),
+		url: 'http://www.edsm.net/api-v1/submit-distances?'+encodeURIComponent(JSON.stringify({data: data})),
 		dataType: 'json',
 		success: function(resp, localstatus, xhr) {
 			responses['EDSM'] = 'ok';
@@ -305,7 +306,7 @@ function cleanup() {
 }
 
 $(document).ready(function () {
-	getTGCData(function() {
+	EDSM.fetchSystems(function() {
 		$('#add-unfinished').attr('disabled', false);
 		updateCoords();
 	});
@@ -807,7 +808,7 @@ function updateCoords() {
 		var good = [];	// list of the good systems found
 		var debug = 10;
 		$.each(systemsMap, function(key, s) {
-			if (s.x == null || s.tgcunlocated) return;	// unlocated systems are of no use (currently including systems we have coords for but that TGC doesn't)
+			if (s.x == null || s.tgcunlocated) return;	// unlocated systems are of no use (currently including systems we have coords for but that TGC doesn't as distances to those systems won't help TGC trilaterate)
 			if (used[vectorToString(s)]) return;	// skip distances already used
 
 			var bestDist = eddist(s, bestCandidate);
@@ -854,7 +855,7 @@ function updateCoords() {
 			var best = [];	// list of the best systems found
 			var bestNum = 0;	// number of candidates differentiated by best systems
 			$.each(systemsMap, function(key, s) {
-				if (s.x == null || s.tgcunlocated) return;	// unlocated systems are of no use (currently including systems we have coords for but that TGC doesn't)
+				if (s.x == null || s.tgcunlocated) return;	// unlocated systems are of no use (currently including systems we have coords for but that TGC doesn't as distances to those systems won't help TGC trilaterate)
 				if (used[vectorToString(s)]) return;	// skip distances already used
 				
 				var dists = {};
@@ -974,7 +975,7 @@ function getLocalSystems(coords) {
 
 	var locals = [];
 	$.each(systemsMap, function(key, val) {
-		locals.push({system:val.name, distance:eddist(val,coords)});
+		if (val.x != null) locals.push({system:val.name, distance:eddist(val,coords)});
 	});
 
 	// add any entered distances to un-located systems
@@ -1084,12 +1085,12 @@ function applyConfig() {
 				<input type="checkbox" name="outputs" value="sql">SQL<br>
 				<input type="checkbox" name="outputs" value="responses">Server Responses
 				<h3>Fetch From</h3>
-				<input type="radio" name="fetch-from" value="TGC">TGC
+				<input type="radio" name="fetch-from" value="EDSM">EDSM
 				<h3>Submit To</h3>
 				<input type="checkbox" name="submit-to" value="EDSM">EDSM (the-temple.de)<br>
 				<input type="checkbox" name="submit-to" value="TGC">TGC (EDSC)
 				<table style="margin-top:2em; font-size:0.66em; width:100%; border:none">
-					<tr><td style="border:none; text-align: left">Version: 2015-06-08</td>
+					<tr><td style="border:none; text-align: left">Version: 2015-09-15</td>
 					<td style="border:none; text-align: center"><a href="https://github.com/SteveHodge/ed-systems">Source code</a></td>
 					<td style="border:none; text-align: right">Copyright &#169; 2014 Steve Hodge</td></tr>
 				</table>
